# Rastreador

./: .audit-ruff.txt  .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.frontend  README.md  api.py  check_releases.py  clean_cnpj_data.py  clean_test_data.py  cnpj_etl.py  cnpj_etl_polars.py  docker-compose.yml  download_cnpj_pr.py  enriquecer_lojas.py  generate_sample_data.py  init.sql  install_deps.py  londrina_businesses_cleaned.json  main.py  package-lock.json  package.json  populate_coords.py  pyproject.toml  requirements-dev.txt  requirements.txt  street_tracking_schema.sql  test_data.json  test_data_cleaned.json  test_duck.py  test_setup.py  vercel.json
.github/workflows/: ci.yml
db/: street_tracking_schema.sql
frontend/: next.config.ts  package-lock.json  package.json
frontend/public/: manifest.json  service-worker.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: map-view.tsx  sidebar.tsx  tech-business-panel.tsx  visit-modal.tsx
frontend/src/utils/: indexedDB.ts
scripts/: exploratory_kde.py
src/components/: map-view.tsx  sidebar.tsx
